<resources>
    <string name="app_name">WaroengUjang</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>
    <string name="account">Account</string>
    <string name="dummy_name">Andre Setiawan</string>
    <string name="serve_new_customer">Serve New Customer</string>
    <string name="enter_table_number">Enter Table Number</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="curently_serving_table">Curently serving table :</string>
    <string name="change_table">Change table</string>
</resources>