<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_round_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/ic_round_menu_book"
        android:title="@string/menu" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart" />
    <item
        android:id="@+id/nav_order"
        android:icon="@drawable/ic_list"
        android:title="@string/order" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />
    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_round_exit_to_app"
        android:title="@string/account" />

</menu>